# linapple

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  INSTALL  Makefile  README.md  gala.conf  linapple  retro-pie-notes.txt  startup.dsk
inc/: 6821.h  AY8910.h  AppleWin.h  Common.h  Debug.h  Debugger_Types.h  DiskChoose.h  DiskFTP.h  DiskImage.h  Frame.h  Joystick.h  Keyboard.h  Log.h  Mockingboard.h  MouseInterface.h  ParallelPrinter.h  Registry.h  Riff.h  SerialComms.h  SoundCore.h  Structs.h  Util_MemoryTextFile.h  Video.h  asset.h  config.h  ftpparse.h  list.h  md5.h  stdafx.h  stretch.h  wincompat.h
linapple-pie/inc/: AppleWin.h  Common.h  Disk.h  DiskFTP.h  Frame.h  Log.h  Memory.h  ParallelPrinter.h  SaveState.h  SerialComms.h  Util_MemoryTextFile.h  Video.h  stretch.h
linapple-pie/src/: 6821.cpp  6821.h  AY8910.cpp  Applewin.cpp  CPU.cpp  CPU.h  Debug.cpp  Debug.h  Debugger_Types.h  Disk.cpp  DiskChoose.cpp  DiskChoose.h  DiskFTP.cpp  DiskImage.cpp  Frame.cpp  Harddisk.cpp  Harddisk.h  Log.cpp  (+30 more)
res/: font.xpm  linapple.conf  splash.xpm
src/: 6821.cpp  AY8910.cpp  AppleWin.h  Applewin.cpp  CMakeLists.txt  CPU.cpp  CPU.h  Common.h  Debug.cpp  Disk.cpp  DiskChoose.cpp  DiskChoose.h  DiskFTP.cpp  DiskImage.cpp  Frame.cpp  Harddisk.cpp  Joystick.cpp  Keyboard.cpp  Log.cpp  Makefile  Memory.cpp  Mockingboard.cpp  MouseInterface.cpp  ParallelPrinter.cpp  Registry.cpp  Registry.h  Riff.cpp  SaveState.cpp  SerialComms.cpp  SoundCore.cpp  Speaker.cpp  Timer.cpp  Util_MemoryTextFile.cpp_  Video.cpp  asset.cpp  chooser.cpp  chooser.h  cli.cpp  cli.h  config.cpp  (+15 more)
